--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -1,7 +1,7 @@
 {
 	"MARVEL_ERROR.ACTION_NOT_VALID": "Үйлдэл хүчингүй",
-	"MARVEL_ERROR.INSUFFICIENT_BALANCE": "Үлдэгдэл хангалтгүй",
-	"MARVEL_ERROR.INVALID_CREDENTIALS": "Хүчингүй итгэмжлэл",
+	"MARVEL_ERROR.INSUFFICIENT_BALANCE": "Үлдэгдэл хүрэлцэхгүй байна",
+	"MARVEL_ERROR.INVALID_CREDENTIALS": "Нэр нууц үг буруу байна",
 	"MARVEL_ERROR.NOT_AUTHORIZED": "Зөвшөөрөлгүй",
 	"MARVEL_ERROR.NOT_FOUND": "Олдсонгүй",
 	"MARVEL_ERROR.OPERATION_NOT": "Үйл ажиллагаа Үгүй",
@@ -20,14 +20,14 @@
 	"MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
 	"MARVEL_MESSAGE.TOKEN_IS_VALID": "Токен хүчинтэй",
 	"active-from-date-required": "огнооноос эхлэн идэвхтэй байх шаардлагатай",
-	"admin-login-title": "Админ руу нэвтэрнэ үү",
+	"admin-login-title": "Админ нэвтрэх",
 	"admin-register-title": "Шинэ данс бүртгүүлэх",
 	"amount-greater-than-zeo": "Дүн нь тэгээс их байх ёстой",
 	"amount-required": "Хэмжээ шаардлагатай",
 	"april": "Дөрөвдүгээр сар",
-	"attribute": "Атрибут",
+	"attribute": "Шүүлт",
 	"attribute-imported-successfully": "Атрибутуудыг амжилттай импортолсон",
-	"attribute-values": "Атрибутын утгууд",
+	"attribute-values": "Шүүлтийн утгууд",
 	"august": "Наймдугаар сар",
 	"auth-menu-checkout": "Тооцоо хийх",
 	"auth-menu-logout": "Гарах",
@@ -38,17 +38,17 @@
 	"authorized-nav-item-settings": "Тохиргоо",
 	"billing-address": "Тооцооны хаяг",
 	"block-customer": "Хэрэглэгчийг блоклох",
-	"block-customer-confirm": "Та энэ үйлчлүүлэгчийг хаахдаа итгэлтэй байна уу?",
+	"block-customer-confirm": "Та энэ үйлчлүүлэгчийг блоклохдоо итгэлтэй байна уу?",
 	"button-block": "Блоклох",
 	"button-cancel": "Цуцлах",
 	"button-delete": "Устгах",
-	"change-locale": "Герман хэл рүү шилжих",
-	"code-required": "Код шаардлагатай",
-	"color-required": "Өнгө шаардлагатай",
+	"change-locale": "Хэл солих",
+	"code-required": "Код заавал оруул",
+	"color-required": "Өнгө заавал оруул",
 	"confirm-password": "Нууц үгээ баталгаажуулна уу!",
 	"currency-required": "Валют сонгоно уу",
 	"december": "Арванхоёрдугаар сар",
-	"delete-item": "Зүйлийг устгах",
+	"delete-item": "Item устгах",
 	"delete-item-confirm": "Та устгахдаа итгэлтэй байна уу?",
 	"description": "Захиалга хянах",
 	"email-required": "Та имэйл хаягаа оруулах шаардлагатай",
@@ -69,7 +69,7 @@
 	"june": "Зургадугаар сар",
 	"march": "Гуравдугаар сар",
 	"may": "Тавдугаар сар",
-	"name-required": "Та нэр өгөх ёстой",
+	"name-required": "Нэр заавал оруул",
 	"nav-menu-contact": "Холбоо барих",
 	"nav-menu-faq": "Түгээмэл асуултууд",
 	"nav-menu-offer": "Санал болгож байна",
@@ -85,7 +85,7 @@
 	"order-total": "нийт",
 	"password-changed-successfully": "Нууц үгээ амжилттай өөрчиллөө!",
 	"password-required": "Та нууц үгээ оруулах шаардлагатай",
-	"password-should-match": "Нууц үг таарах ёстой!",
+	"password-should-match": "Нууц үг ижил байх ёстой!",
 	"pixel": "Пиксел",
 	"product-imported-successfully": "Бүтээгдэхүүнийг амжилттай импортолсон",
 	"sale-history": "Борлуулалтын түүх",
@@ -94,20 +94,20 @@
 	"serial-must-be-integer": "Цуваа бүхэл тоо байх ёстой",
 	"serial-required": "Цуврал шаардлагатай",
 	"shipping-address": "Хүргэлтийн хаяг",
-	"sidebar-nav-item-attribute-value": "Атрибутын утгууд",
+	"sidebar-nav-item-attribute-value": "Шүүлтийн утгууд",
 	"sidebar-nav-item-attributes": "Шүүлт",
 	"sidebar-nav-item-categories": "Ангилалууд",
 	"sidebar-nav-item-coupons": "Купон",
 	"sidebar-nav-item-dashboard": "Хяналтын самбар",
 	"sidebar-nav-item-groups": "Бүлгүүд",
-	"sidebar-nav-item-my-shops": "Миний дэлгүүрүүд",
-	"sidebar-nav-item-my-shops-dashboard": "Дэлгүүрийн хяналтын самбар",
+	"sidebar-nav-item-my-shops": "Миний байгууллагууд",
+	"sidebar-nav-item-my-shops-dashboard": "Хяналтын самбар",
 	"sidebar-nav-item-order-status": "Захиалгын байдал",
 	"sidebar-nav-item-orders": "Захиалга",
 	"sidebar-nav-item-products": "Бүтээгдэхүүн",
 	"sidebar-nav-item-settings": "Тохиргоо",
 	"sidebar-nav-item-shippings": "Хүргэлт",
-	"sidebar-nav-item-shops": "Дэлгүүрүүд",
+	"sidebar-nav-item-shops": "Байгууллага",
 	"sidebar-nav-item-staffs": "Ажилтнууд",
 	"sidebar-nav-item-tags": "Шошго",
 	"sidebar-nav-item-taxes": "Татвар",
@@ -132,7 +132,7 @@
 	"text-ban-user": "Хэрэглэгчийг хориглох",
 	"text-bank": "Банк",
 	"text-banner": "Баннер",
-	"text-commission-rate": "Админ комиссын хувь",
+	"text-commission-rate": "Админ ашгийн хувь",
 	"text-create-shop": "Байгууллага үүсгэх",
 	"text-current-balance": "Одоогийн үлдэгдэл",
 	"text-delete": "Устгах",
@@ -177,7 +177,7 @@
 	"text-products": "Бүтээгдэхүүн",
 	"text-px": "px",
 	"text-read-more": "Цааш унших",
-	"text-registered-since": "Бүртгэгдсэн цагаас хойш",
+	"text-registered-since": "Бүртгүүлсэн",
 	"text-rejected": "Татгалзсан",
 	"text-return-home": "Гэртээ буцах",
 	"text-revenue": "Орлого",
@@ -191,7 +191,7 @@
 	"text-upload-highlight": "Зураг байршуулах",
 	"text-upload-message": "эсвэл чирэх, буулгах",
 	"text-view": "Харах",
-	"text-visit-shop": "Дэлгүүрт зочилно уу",
+	"text-visit-shop": "Зочлох",
 	"text-withdrawal-info": "Буцаалтын мэдээлэл",
 	"token-required": "Та токен хаягаа оруулах шаардлагатай",
 	"type-required": "Төрөл шаардлагатай",
