--- a/apps/dashboard/public/locales/mn/form.json
+++ b/apps/dashboard/public/locales/mn/form.json
@@ -55,7 +55,7 @@
 	"edit-attribute": "Аттрибутыг засах",
 	"error-account-must-number": "Бүртгэл нь дугаар байх ёстой",
 	"error-active-date-required": "Та идэвхтэй огноог тохируулах ёстой",
-	"error-admin-commission": "Та комиссын хувь хэмжээгээ тохируулах хэрэгтэй",
+	"error-admin-commission": "Та ашгийн хувь хэмжээгээ тохируулах хэрэгтэй",
 	"error-amount-must-number": "Дүн нь тоо байх ёстой",
 	"error-amount-must-positive": "Тоо хэмжээ эерэг байх ёстой",
 	"error-amount-number": "Дүн нь тоо байх ёстой",
@@ -64,7 +64,7 @@
 	"error-color-required": "Өнгө шаардлагатай",
 	"error-confirm-password": "Нууц үгээ баталгаажуулна уу!",
 	"error-coupon-code-required": "Код шаардлагатай",
-	"error-credential-wrong": "Итгэмжлэх жуух бичиг буруу байсан!",
+	"error-credential-wrong": "Нэвтрэх нэр нууц үг буруу байна!",
 	"error-currency-required": "Валют шаардлагатай",
 	"error-email-format": "Өгөгдсөн имэйл хаягийн формат буруу байна",
 	"error-email-required": "Та имэйл хаягаа оруулах шаардлагатай",
@@ -115,7 +115,7 @@
 	"form-title-create-order-status": "Захиалгын статус үүсгэх",
 	"form-title-create-product": "Шинэ бүтээгдэхүүн үүсгэх",
 	"form-title-create-shipping": "Шинэ хүргэлт үүсгэх",
-	"form-title-create-shop": "Дэлгүүр үүсгэх",
+	"form-title-create-shop": "Байгууллага үүсгэх",
 	"form-title-create-staff": "Ажилтан үүсгэх",
 	"form-title-create-tag": "Tag үүсгэх",
 	"form-title-create-tax": "Шинэ татвар бий болгох",
@@ -156,7 +156,7 @@
 	"input-label-account-holder-email": "Данс эзэмшигчийн имэйл",
 	"input-label-account-holder-name": "Дансны эзэмшигчийн нэр",
 	"input-label-account-number": "Дансны дугаар",
-	"input-label-admin-commission-rate": "Админд зориулсан комиссын хувь хэмжээ",
+	"input-label-admin-commission-rate": "Шимтгэлийн хувь хэмжээ",
 	"input-label-amount": "Хэмжээ",
 	"input-label-attribute-name": "Аттрибутын нэр",
 	"input-label-attribute-value": "Атрибутын утга",
@@ -164,7 +164,7 @@
 	"input-label-avatar": "Аватар",
 	"input-label-bank-name": "банкны нэр",
 	"input-label-bio": "Био",
-	"input-label-canonical-url": "Каноник URL",
+	"input-label-canonical-url": "Canonical URL",
 	"input-label-categories": "Ангилалууд",
 	"input-label-city": "Хот",
 	"input-label-code": "Код",
@@ -226,7 +226,7 @@
 	"input-label-site-title": "Сайтын гарчиг",
 	"input-label-sku": "ску",
 	"input-label-social-url": "Профайл url нэмнэ үү",
-	"input-label-state": "Муж",
+	"input-label-state": "Сум/Дүүрэг",
 	"input-label-status": "Статус",
 	"input-label-street-address": "Гудамжны хаяг",
 	"input-label-tax-class": "Татварын ангилал",
@@ -250,7 +250,7 @@
 	"item-description-choose": "Сонгох",
 	"item-description-edit": "Засах",
 	"item-description-update": "Шинэчлэх",
-	"link-register-shop-owner": "Дэлгүүрийн эзэмшигчээр бүртгүүлнэ үү",
+	"link-register-shop-owner": "Хамтрагч байгууллагаар бүртгүүлэх",
 	"logo-dimension-help-text": "Логоны хэмжээ нь байх ёстой",
 	"logo-help-text": "Сайтын логог эндээс байршуулна уу.",
 	"order-status-description-helper-text": "статусыг эндээс захиалах",
@@ -262,8 +262,8 @@
 	"promotional-slider": "Сурталчилгааны слайдерууд",
 	"promotional-slider-help-text": "Сурталчилгааны гулсагчуудыг байршуулах",
 	"shipping-form-info-help-text": "таны тээвэрлэлтийн тодорхойлолт болон шаардлагатай мэдээллийг эндээс авна уу",
-	"shop-address": "Дэлгүүрийн хаяг",
-	"shop-address-helper-text": "Эндээс дэлгүүрийн хаягаа оруулна уу",
+	"shop-address": "Байгууллагийн хаяг",
+	"shop-address-helper-text": "Эндээс хаягаа оруулна уу",
 	"shop-basic-info": "Үндсэн мэдээлэл",
 	"shop-basic-info-help-text": "Дэлгүүрийнхээ талаарх үндсэн мэдээллийг эндээс нэмнэ үү",
 	"shop-cover-image-help-text": "Дэлгүүрийнхээ хавтасны зургийг эндээс байршуулна уу",
@@ -282,7 +282,7 @@
 	"text-delivery-schedule": "Хүргэлтийн хуваарь",
 	"text-no-account": "Бүртгэлгүй юу?",
 	"text-register": "Бүртгүүлэх",
-	"text-reset-password": "Нууц үгээ анхны байдалд нь оруулж",
+	"text-reset-password": "Нууц үгээ солих",
 	"text-staff": "Ажилтнууд",
 	"text-store-owner": "Дэлгүүрийн эзэн",
 	"text-submit-email": "Имэйл илгээх",
