--- a/apps/dashboard/public/locales/mn/widgets.json
+++ b/apps/dashboard/public/locales/mn/widgets.json
@@ -6,5 +6,5 @@
 	"sticker-card-title-order": "Нийт захиалга",
 	"sticker-card-title-rev": "Нийт орлого",
 	"sticker-card-title-today-rev": "Өнөөдрийн орлого",
-	"sticker-card-title-total-shops": "Нийт дэлгүүрүүд"
+	"sticker-card-title-total-shops": "Нийт байгууллага"
 }
