--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -265,7 +265,7 @@
 	"text-sold": "Борлуулсан",
 	"text-sorting-options": "Эрэмбэлэх сонголтууд",
 	"text-sports": "Спорт",
-	"text-state": "Муж",
+	"text-state": "Сум/Дүүрэг",
 	"text-status": "Статус",
 	"text-street-address": "Гудамжны хаяг",
 	"text-sub-orders": "Дэд захиалга",
