--- a/apps/storefront/public/locales/mn/forms.json
+++ b/apps/storefront/public/locales/mn/forms.json
@@ -41,7 +41,7 @@
 	"label-remember-me": "Намайг санаарай",
 	"label-save-information": "Дараагийн удаад энэ мэдээллийг хадгална уу",
 	"label-save-review-information": "Дараагийн удаа сэтгэгдэл бичихийн тулд миний нэр, имэйл, вэбсайтыг энэ хөтөч дээр хадгална уу.",
-	"label-state": "Муж",
+	"label-state": "Сум/Дүүрэг",
 	"label-street-address": "Гудамжны хаяг",
 	"label-subject": "Сэдэв",
 	"label-subject-star": "Сэдэв*",
