--- a/apps/storefront/public/locales/mn/new.json
+++ b/apps/storefront/public/locales/mn/new.json
@@ -9,7 +9,7 @@
 	"text-no-flash-products-found": "Ямар ч флаш бүтээгдэхүүн олдсонгүй!",
 	"text-no-on-selling-products-found": "Борлуулах бүтээгдэхүүн олдсонгүй!",
 	"text-save": "Хадгалах",
-	"text-state": "Муж",
+	"text-state": "Сум/Дүүрэг",
 	"text-street-address": "Гудамжны хаяг",
 	"text-title": "Гарчиг",
 	"text-type": "Төрөл",
