--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -102,7 +102,7 @@
 	"sidebar-nav-item-groups": "Бүлгүүд",
 	"sidebar-nav-item-my-shops": "Миний байгууллагууд",
 	"sidebar-nav-item-my-shops-dashboard": "Хяналтын самбар",
-	"sidebar-nav-item-order-status": "Захиалгын байдал",
+	"sidebar-nav-item-order-status": "Захиалгын төлөв",
 	"sidebar-nav-item-orders": "Захиалга",
 	"sidebar-nav-item-products": "Бүтээгдэхүүн",
 	"sidebar-nav-item-settings": "Тохиргоо",
