--- a/apps/dashboard/public/locales/mn/form.json
+++ b/apps/dashboard/public/locales/mn/form.json
@@ -26,7 +26,7 @@
 	"button-label-change-status": "Статус өөрчлөх",
 	"button-label-create-customer": "Хэрэглэгч үүсгэх",
 	"button-label-login": "Нэвтрэх",
-	"button-label-order-status": "Захиалгын байдал",
+	"button-label-order-status": "Захиалгын төлөв",
 	"button-label-remove": "Устгах",
 	"button-label-save": "Хадгалах",
 	"button-label-save-settings": "Тохиргоог хадгалах",
@@ -202,7 +202,7 @@
 	"input-label-og-title": "OG Гарчиг",
 	"input-label-old-password": "Хуучин нууц үг",
 	"input-label-order-id": "Захиалгын дугаар",
-	"input-label-order-status": "Захиалгын байдал",
+	"input-label-order-status": "Захиалгын төлөв",
 	"input-label-orders": "Захиалга",
 	"input-label-parent-category": "Эцэг эхийн ангилал",
 	"input-label-password": "нууц үг",
@@ -242,7 +242,7 @@
 	"input-label-website": "Вэбсайт",
 	"input-label-width": "Өргөн",
 	"input-label-zip": "ZIP",
-	"input-placeholder-order-status": "Захиалгын байдал",
+	"input-placeholder-order-status": "Захиалгын төлөв",
 	"input-placeholder-search": "Асуултаа бичээд enter дарна уу",
 	"input-title": "Гарчиг",
 	"item-description": "Тайлбар",
@@ -265,12 +265,12 @@
 	"shop-address": "Байгууллагийн хаяг",
 	"shop-address-helper-text": "Эндээс хаягаа оруулна уу",
 	"shop-basic-info": "Үндсэн мэдээлэл",
-	"shop-basic-info-help-text": "Дэлгүүрийнхээ талаарх үндсэн мэдээллийг эндээс нэмнэ үү",
-	"shop-cover-image-help-text": "Дэлгүүрийнхээ хавтасны зургийг эндээс байршуулна уу",
+	"shop-basic-info-help-text": "Байгууллагийнхаа талаарх үндсэн мэдээллийг эндээс нэмнэ үү",
+	"shop-cover-image-help-text": "Байгууллагийнхаа хавтасны зургийг эндээс байршуулна уу",
 	"shop-cover-image-title": "Хавтасны зураг",
-	"shop-logo-help-text": "Дэлгүүрийнхээ логог эндээс байршуулна уу",
+	"shop-logo-help-text": "Байгууллагийнхаа логог эндээс байршуулна уу",
 	"shop-payment-info": "Төлбөрийн мэдээлэл",
-	"shop-settings": "Дэлгүүрийн тохиргоо",
+	"shop-settings": "Байгууллагийн тохиргоо",
 	"shop-settings-helper-text": "Эндээс дэлгүүрийн тохиргооны мэдээллээ нэмнэ үү",
 	"site-info-help-text": "Сайтын мэдээллээ эндээс өөрчилнө үү",
 	"tag-description-helper-text": "Таны шошгоны дэлгэрэнгүй мэдээлэл болон шаардлагатай мэдээллийг эндээс авна уу",
@@ -284,7 +284,7 @@
 	"text-register": "Бүртгүүлэх",
 	"text-reset-password": "Нууц үгээ солих",
 	"text-staff": "Ажилтнууд",
-	"text-store-owner": "Дэлгүүрийн эзэн",
+	"text-store-owner": "Байгууллагийн эзэн",
 	"text-submit-email": "Имэйл илгээх",
 	"text-submit-token": "Токен илгээх",
 	"text-super-admin": "Супер админ",
