--- a/apps/dashboard/public/locales/mn/table.json
+++ b/apps/dashboard/public/locales/mn/table.json
@@ -31,9 +31,9 @@
 	"table-item-rate": "Үнэлгээ",
 	"table-item-serial": "Цуврал",
 	"table-item-shipping-address": "Хүргэлтийн хаяг",
-	"table-item-shop": "Дэлгүүр",
-	"table-item-shop-id": "Дэлгүүрийн ID",
-	"table-item-shop-name": "Дэлгүүрийн нэр",
+	"table-item-shop": "Байгууллага",
+	"table-item-shop-id": "Байгууллагийн ID",
+	"table-item-shop-name": "Байгууллагийн нэр",
 	"table-item-slug": "Слаг",
 	"table-item-state": "Сум/Дүүрэг",
 	"table-item-status": "Статус",
