--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -254,10 +254,10 @@
 	"text-shipping-calculation-label": "Тооцоолсон хүргэлт",
 	"text-shipping-charge": "Хүргэлтийн хураамж",
 	"text-shipping-cost": "Хүргэлтийн үнэ",
-	"text-shop": "Дэлгүүр",
+	"text-shop": "Байгууллага",
 	"text-shop-by-category": "Ангилалаар дэлгүүр хэсээрэй",
-	"text-shop-colon": "Дэлгүүр:",
-	"text-shopping-cart": "Дэлгүүрийн түрдэг тэрэг",
+	"text-shop-colon": "Байгууллага:",
+	"text-shopping-cart": "Байгууллагийн сагс",
 	"text-shops-title": "Таны ойролцоох супер дэлгүүрүүд",
 	"text-sign-in": "Нэвтрэн орно уу",
 	"text-sku": "ску",
