--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -9,7 +9,7 @@
 	"MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Facebook эсвэл Google ашиглан нэвтэрнэ үү",
 	"MARVEL_ERROR.SHOP_NOT_APPROVED": "Байгууллага зөвшөөрөгдөөгүй",
 	"MARVEL_ERROR.SOMETHING_WENT_WRONG": "Ямар нэгэн зүйл буруугаар эргэсэн",
-	"MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Татан авалтыг дэлгүүрт хавсаргасан байх ёстой",
+	"MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Буцаалтыг дэлгүүрт хавсаргасан байх ёстой",
 	"MARVEL_ERROR.WRONG_CSV": "Та буруу csv файл байршуулсан байна!",
 	"MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Нууц үг шинэчлэх имэйлийг ирсэн имэйлээс шалгана уу",
 	"MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Имэйлийг амжилттай илгээсэн",
@@ -74,7 +74,7 @@
 	"nav-menu-faq": "Түгээмэл асуултууд",
 	"nav-menu-offer": "Санал болгож байна",
 	"nav-menu-track-order": "Захиалга хянах",
-	"navbar-add-products": "Бүтээгдэхүүн нэмэх",
+	"navbar-add-products": "Эвэнт нэмэх",
 	"no-order-found": "Захиалга олдсонгүй",
 	"november": "Арваннэгдүгээр сар",
 	"october": "Аравдугаар сар",
@@ -87,7 +87,7 @@
 	"password-required": "Та нууц үгээ оруулах шаардлагатай",
 	"password-should-match": "Нууц үг ижил байх ёстой!",
 	"pixel": "Пиксел",
-	"product-imported-successfully": "Бүтээгдэхүүнийг амжилттай импортолсон",
+	"product-imported-successfully": "Эвэнтийг амжилттай импортолсон",
 	"sale-history": "Борлуулалтын түүх",
 	"september": "есдүгээр сар",
 	"serial-greater-than-zeo": "Цуваа нь тэгээс их байх ёстой",
@@ -104,7 +104,7 @@
 	"sidebar-nav-item-my-shops-dashboard": "Хяналтын самбар",
 	"sidebar-nav-item-order-status": "Захиалгын төлөв",
 	"sidebar-nav-item-orders": "Захиалга",
-	"sidebar-nav-item-products": "Бүтээгдэхүүн",
+	"sidebar-nav-item-products": "Эвэнт",
 	"sidebar-nav-item-settings": "Тохиргоо",
 	"sidebar-nav-item-shippings": "Хүргэлт",
 	"sidebar-nav-item-shops": "Байгууллага",
@@ -146,15 +146,15 @@
 	"text-enabled": "Идэвхжүүлсэн байна",
 	"text-export-attributes": "Экспортын шинж чанарууд",
 	"text-export-import": "Экспорт/Импорт",
-	"text-export-product-variations": "Экспортын бүтээгдэхүүний өөрчлөлт",
-	"text-export-products": "Экспортын бүтээгдэхүүн",
+	"text-export-product-variations": "Экспортын эвэнтий өөрчлөлт",
+	"text-export-products": "Экспортын эвэнт",
 	"text-filter": "Шүүлтүүр",
 	"text-gross-sales": "Нйит борлуулалт",
 	"text-image": "Зураг",
 	"text-img-format": "PNG, JPG",
 	"text-import-attributes": "Импортын шинж чанарууд",
-	"text-import-product-variations": "Импортын бүтээгдэхүүний хувилбарууд",
-	"text-import-products": "Импортын бүтээгдэхүүн",
+	"text-import-product-variations": "Импортын эвэнтий хувилбарууд",
+	"text-import-products": "Импортын эвэнт",
 	"text-inactive": "Идэвхгүй",
 	"text-items-sold": "Худалдсан зүйлс",
 	"text-less": "Бага",
@@ -174,7 +174,7 @@
 	"text-pending": "Хүлээгдэж байна",
 	"text-permission-message": "Таны Байгууллага хараахан идэвхжээгүй байна. Та цаашдын үйлдлийг үргэлжлүүлэх боломжгүй.",
 	"text-processing": "Боловсруулж байна",
-	"text-products": "Бүтээгдэхүүн",
+	"text-products": "Эвэнт",
 	"text-px": "px",
 	"text-read-more": "Цааш унших",
 	"text-registered-since": "Бүртгүүлсэн",
@@ -187,7 +187,7 @@
 	"text-shop-dashboard": "Хяналтын самбарыг харах",
 	"text-status": "Статус",
 	"text-total-orders": "Нийт захиалга",
-	"text-total-products": "Нийт бүтээгдэхүүн",
+	"text-total-products": "Нийт эвэнт",
 	"text-upload-highlight": "Зураг байршуулах",
 	"text-upload-message": "эсвэл чирэх, буулгах",
 	"text-view": "Харах",
