--- a/apps/dashboard/public/locales/mn/form.json
+++ b/apps/dashboard/public/locales/mn/form.json
@@ -11,7 +11,7 @@
 	"button-label-add-group": "Бүлэг нэмэх",
 	"button-label-add-option": "Сонголт нэмнэ үү",
 	"button-label-add-order-status": "Захиалгын статус нэмэх",
-	"button-label-add-product": "Бүтээгдэхүүн нэмэх",
+	"button-label-add-product": "Эвэнт нэмэх",
 	"button-label-add-social": "Нийгмийн шинэ профайл нэмэх",
 	"button-label-add-staff": "Ажилтан нэмэх",
 	"button-label-add-tag": "Шошго нэмэх",
@@ -38,7 +38,7 @@
 	"button-label-update-category": "Ангилалыг шинэчлэх",
 	"button-label-update-coupon": "Купоныг шинэчлэх",
 	"button-label-update-group": "Бүлгийг шинэчлэх",
-	"button-label-update-product": "Бүтээгдэхүүнийг шинэчлэх",
+	"button-label-update-product": "Эвэнтийг шинэчлэх",
 	"button-label-update-tag": "Tag шинэчлэх",
 	"button-label-update-withdraw": "Татаж авахыг шинэчлэх",
 	"category-description-helper-text": "өөрийн ангиллын дэлгэрэнгүй мэдээлэл болон шаардлагатай мэдээллийг эндээс авна уу",
@@ -79,8 +79,8 @@
 	"error-price-must-number": "Үнэ нь тоо байх ёстой",
 	"error-price-must-positive": "Үнэ эерэг байх ёстой",
 	"error-price-required": "Үнэ шаардлагатай",
-	"error-product-card-required": "Бүтээгдэхүүний картыг сонгоно уу",
-	"error-product-type-required": "Бүтээгдэхүүний төрөл шаардлагатай",
+	"error-product-card-required": "Эвэнтий картыг сонгоно уу",
+	"error-product-type-required": "Эвэнтий төрөл шаардлагатай",
 	"error-quantity-must-integer": "Тоо хэмжээ нь бүхэл тоо байх ёстой",
 	"error-quantity-must-number": "Тоо хэмжээ нь тоо байх ёстой",
 	"error-quantity-must-positive": "Тоо хэмжээ эерэг байх ёстой",
@@ -101,19 +101,19 @@
 	"error-token-required": "Токен шаардлагатай!",
 	"error-type-required": "Төрөл шаардлагатай",
 	"error-unit-required": "Нэгж шаардлагатай",
-	"featured-image-help-text": "Бүтээгдэхүүнийхээ онцолсон зургийг энд байршуулна уу",
+	"featured-image-help-text": "Эвэнтийхээ онцолсон зургийг энд байршуулна уу",
 	"featured-image-title": "Онцлох зураг",
 	"form-description-attribute-name": "таны шинж чанарын нэр болон шаардлагатай мэдээллийг эндээс авна уу",
 	"form-description-attribute-value": "таны шинж чанарын үнэ цэнэ болон шаардлагатай мэдээллийг эндээс авна уу",
-	"form-description-product-type": "Бүтээгдэхүүний төрлийн маягтыг эндээс сонгоно уу",
-	"form-description-simple-product-info": "Таны энгийн бүтээгдэхүүний тодорхойлолт, шаардлагатай мэдээллийг эндээс авна уу",
+	"form-description-product-type": "Эвэнтий төрлийн маягтыг эндээс сонгоно уу",
+	"form-description-simple-product-info": "Таны энгийн эвэнтий тодорхойлолт, шаардлагатай мэдээллийг эндээс авна уу",
 	"form-description-staff-info": "Ажилтны мэдээллээ нэмээд эндээс шинэ ажилтан үүсгэнэ үү",
-	"form-description-variation-product-info": "таны бүтээгдэхүүний өөрчлөлт, шаардлагатай мэдээллийг эндээс авна уу",
+	"form-description-variation-product-info": "таны эвэнтий өөрчлөлт, шаардлагатай мэдээллийг эндээс авна уу",
 	"form-title-create-category": "Шинэ ангилал үүсгэх",
 	"form-title-create-coupon": "Шинэ купон үүсгэх",
 	"form-title-create-customer": "Шинэ харилцагч үүсгэх",
 	"form-title-create-order-status": "Захиалгын статус үүсгэх",
-	"form-title-create-product": "Шинэ бүтээгдэхүүн үүсгэх",
+	"form-title-create-product": "Шинэ эвэнт үүсгэх",
 	"form-title-create-shipping": "Шинэ хүргэлт үүсгэх",
 	"form-title-create-shop": "Байгууллага үүсгэх",
 	"form-title-create-staff": "Ажилтан үүсгэх",
@@ -124,23 +124,23 @@
 	"form-title-edit-category": "Ангилал засах",
 	"form-title-edit-coupon": "Купон засварлах",
 	"form-title-edit-order-status": "Захиалгын статусыг засах",
-	"form-title-edit-product": "Бүтээгдэхүүнийг засах",
+	"form-title-edit-product": "Эвэнтийг засах",
 	"form-title-edit-type": "Төрөл засах",
 	"form-title-forgot-password": "Нууц үгээ мартсан",
 	"form-title-information": "мэдээлэл",
 	"form-title-options": "Сонголтууд",
 	"form-title-permission": "Permission",
-	"form-title-product-type": "Бүтээгдэхүүний төрөл",
+	"form-title-product-type": "Эвэнтий төрөл",
 	"form-title-profile-settings": "Профайлын тохиргоо",
 	"form-title-settings": "Тохиргоо",
-	"form-title-simple-product-info": "Бүтээгдэхүүний энгийн мэдээлэл",
+	"form-title-simple-product-info": "Эвэнтий энгийн мэдээлэл",
 	"form-title-update-customer": "Хэрэглэгчийг шинэчлэх",
 	"form-title-update-shipping": "Хүргэлтийг шинэчлэх",
 	"form-title-update-tax": "Татварыг шинэчлэх",
 	"form-title-variant": "Хувилбар",
 	"form-title-variation-added": "Хувилбар нэмсэн",
-	"form-title-variation-product-info": "Бүтээгдэхүүний өөрчлөлтийн мэдээлэл",
-	"gallery-help-text": "Бүтээгдэхүүний зургийн цомгийг энд байршуулна уу",
+	"form-title-variation-product-info": "Эвэнтий өөрчлөлтийн мэдээлэл",
+	"gallery-help-text": "Эвэнтий зургийн цомгийг энд байршуулна уу",
 	"gallery-title": "Галерей",
 	"group-description-help-text": "таны бүлгийн тодорхойлолт болон шаардлагатай мэдээллийг эндээс авна уу",
 	"group-settings": "Бүлэгтэй холбоотой тохиргоог сонгоно уу",
@@ -209,8 +209,8 @@
 	"input-label-payment-method": "Төлбөрийн нөхцөл",
 	"input-label-percentage": "хувь",
 	"input-label-price": "Үнэ",
-	"input-label-product-card-type": "Бүтээгдэхүүний картыг сонгоно уу",
-	"input-label-products": "Бүтээгдэхүүн",
+	"input-label-product-card-type": "Эвэнтий картыг сонгоно уу",
+	"input-label-products": "Эвэнт",
 	"input-label-published": "Нийтэлсэн",
 	"input-label-quantity": "Тоо хэмжээ",
 	"input-label-rate": "Үнэлгээ",
@@ -257,7 +257,7 @@
 	"password-help-text": "Эндээс нууц үгээ солино уу",
 	"payment-info-helper-text": "Төлбөрийн мэдээллээ эндээс нэмнэ үү",
 	"placeholder-search-location": "Байршлын маягтыг эндээс хайна уу",
-	"product-description-help-text": "таны бүтээгдэхүүний тодорхойлолт болон шаардлагатай мэдээллийг эндээс авна уу",
+	"product-description-help-text": "таны эвэнтий тодорхойлолт болон шаардлагатай мэдээллийг эндээс авна уу",
 	"profile-info-help-text": "Эндээс профайлын мэдээллээ оруулна уу",
 	"promotional-slider": "Сурталчилгааны слайдерууд",
 	"promotional-slider-help-text": "Сурталчилгааны гулсагчуудыг байршуулах",
@@ -291,7 +291,7 @@
 	"token-label": "Имэйлээс авсан токеноо тавь",
 	"total-variation-added": "Хувилбар",
 	"type-and-category": "Бүлэг, ангилал",
-	"type-and-category-help-text": "Эндээс бүтээгдэхүүний бүлэг, ангиллыг сонгоно уу",
+	"type-and-category-help-text": "Эндээс эвэнтий бүлэг, ангиллыг сонгоно уу",
 	"update-attribute-value": "Аттрибутын утгыг шинэчлэх",
 	"withdraw-description-helper-text": "хүсэлтээ эндээс буцаана уу"
 }
