--- a/apps/dashboard/public/locales/mn/table.json
+++ b/apps/dashboard/public/locales/mn/table.json
@@ -26,7 +26,7 @@
 	"table-item-order-date": "Захиалгын огноо",
 	"table-item-owner-name": "Эзэмшигчийн нэр",
 	"table-item-payment-method": "Төлбөрийн нөхцөл",
-	"table-item-products": "Бүтээгдэхүүн",
+	"table-item-products": "Эвэнт",
 	"table-item-quantity": "Тоо хэмжээ",
 	"table-item-rate": "Үнэлгээ",
 	"table-item-serial": "Цуврал",
@@ -40,7 +40,7 @@
 	"table-item-title": "Нэр",
 	"table-item-total": "нийт",
 	"table-item-total-orders": "Захиалга",
-	"table-item-total-products": "Бүтээгдэхүүн",
+	"table-item-total-products": "Эвэнт",
 	"table-item-tracking-number": "Хяналтын дугаар",
 	"table-item-type": "Төрөл",
 	"table-item-unit": "Үнэ/нэгж",
