--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -10,7 +10,7 @@
 	"CHAWKBAZAR_ERROR.OTP_VERIFICATION_FAILED": "OTP баталгаажуулалт амжилтгүй боллоо",
 	"CHAWKBAZAR_ERROR.PAYMENT_FAILED": "Төлбөр төлөлт амжилтгүй боллоо",
 	"CHAWKBAZAR_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Facebook эсвэл Google ашиглан нэвтэрнэ үү",
-	"CHAWKBAZAR_ERROR.SHOP_NOT_APPROVED": "Дэлгүүр зөвшөөрөгдөөгүй",
+	"CHAWKBAZAR_ERROR.SHOP_NOT_APPROVED": "Байгууллага зөвшөөрөгдөөгүй",
 	"CHAWKBAZAR_ERROR.SOMETHING_WENT_WRONG": "Ямар нэгэн алдаа гарлаа",
 	"CHAWKBAZAR_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Татан авалтыг дэлгүүрт хавсаргасан байх ёстой",
 	"CHAWKBAZAR_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Нууц үг шинэчлэх имэйлийг ирсэн имэйлээс шалгана уу",
@@ -73,7 +73,7 @@
 	"feature-description-one": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
 	"feature-description-three": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
 	"feature-description-two": "Хэрэв та гишүүнчлэлийн хураамжаа хуримтлалд оруулахгүй бол бид зөрүүг буцаан олгох болно",
-	"feature-title-four": "1000+ бүтээгдэхүүн өртгөөр нь үнэлэгддэг",
+	"feature-title-four": "1000+ эвэнт өртгөөр нь үнэлэгддэг",
 	"feature-title-one": "Баталгаат хадгаламж",
 	"feature-title-three": "Супер хурдан хүргэлт",
 	"feature-title-two": "Эрсдэлгүй туршаад үзээрэй",
@@ -169,7 +169,7 @@
 	"text-instagram-thumbnail": "Instagram өнгөц зураг",
 	"text-item": "Зүйл",
 	"text-items": "Зүйлүүд",
-	"text-load-more-products": "Илүү олон бүтээгдэхүүн ачаалах",
+	"text-load-more-products": "Илүү олон эвэнт ачаалах",
 	"text-login": "Нэвтрэх",
 	"text-login-mobile": "Гар утасны дугаараар нэвтэрнэ үү",
 	"text-login-with-facebook": "Facebook-ээр нэвтэрнэ үү",
@@ -178,7 +178,7 @@
 	"text-man": "Эр хүн",
 	"text-manage-your": "Удирдах",
 	"text-map": "Газрын зураг",
-	"text-message-sub-order": "Энэ захиалга нь олон үйлдвэрлэгчийн бүтээгдэхүүнтэй. Тиймээс бид энэ захиалгыг олон борлуулагчийн захиалгад хуваасан.",
+	"text-message-sub-order": "Энэ захиалга нь олон үйлдвэрлэгчийн эвэнттэй. Тиймээс бид энэ захиалгыг олон борлуулагчийн захиалгад хуваасан.",
 	"text-mins": "Мин",
 	"text-more-info": "Илүү мэдээлэл",
 	"text-new-arrivals": "Шинээр ирсэн",
@@ -188,25 +188,25 @@
 	"text-newsletter-title": "Мөн шинэ цуглуулгын саналыг аваарай",
 	"text-no-account": "Бүртгэлгүй юу?",
 	"text-no-address": "Хаяг олдсонгүй",
-	"text-no-best-selling-products-found": "Шилдэг борлуулалттай бүтээгдэхүүн олдсонгүй!",
+	"text-no-best-selling-products-found": "Шилдэг борлуулалттай эвэнт олдсонгүй!",
 	"text-no-brands-found": "Брэнд олдсонгүй",
 	"text-no-categories-found": "Ангилал олдсонгүй!",
 	"text-no-contact": "Харилцагч олдсонгүй",
 	"text-no-delivery-time-found": "Хүргэлтийн хуваарь олдсонгүй",
 	"text-no-email": "Имэйл олдсонгүй",
-	"text-no-featured-products-found": "Онцолсон бүтээгдэхүүн олдсонгүй!",
-	"text-no-flash-products-found": "Ямар ч флаш бүтээгдэхүүн олдсонгүй!",
+	"text-no-featured-products-found": "Онцолсон эвэнт олдсонгүй!",
+	"text-no-flash-products-found": "Ямар ч флаш эвэнт олдсонгүй!",
 	"text-no-google-map-key": "Google газрын зургийн түлхүүр нэмээгүй",
-	"text-no-on-selling-products-found": "Борлуулах бүтээгдэхүүн олдсонгүй!",
+	"text-no-on-selling-products-found": "Борлуулах эвэнт олдсонгүй!",
 	"text-no-order-found": "Уучлаарай, захиалга олдсонгүй!",
 	"text-no-phone": "Утасны дугаар нэмээгүй байна",
-	"text-no-products": "Бүтээгдэхүүн олдсонгүй",
-	"text-no-products-found": "Уучлаарай, бүтээгдэхүүн олдсонгүй!",
+	"text-no-products": "Эвэнт олдсонгүй",
+	"text-no-products-found": "Уучлаарай, эвэнт олдсонгүй!",
 	"text-no-result-found": "Үр дүн олдсонгүй",
 	"text-note": "тэмдэглэл",
 	"text-now-call": "Одоо залга",
 	"text-oldest": "Хамгийн ахмад",
-	"text-on-selling-products": "Бүтээгдэхүүн борлуулах тухай",
+	"text-on-selling-products": "Эвэнт борлуулах тухай",
 	"text-or": "эсвэл",
 	"text-order": "Захиалга",
 	"text-order-details": "захиалгын мэдээлэл",
@@ -236,18 +236,18 @@
 	"text-price-high-low": "Үнэ: өндөрөөс бага хүртэл",
 	"text-price-low-high": "Үнэ: бага ба өндөр",
 	"text-proceed-to-checkout": "Төлбөрийг үргэлжлүүлнэ үү",
-	"text-product": "Бүтээгдэхүүн",
-	"text-products": "Бүтээгдэхүүн",
+	"text-product": "Эвэнт",
+	"text-products": "Эвэнт",
 	"text-quantity": "Тоо хэмжээ",
 	"text-recent-orders": "сүүлийн үеийн захиалга",
 	"text-register": "Бүртгүүлэх",
-	"text-related-products": "Холбоотой бүтээгдэхүүн",
+	"text-related-products": "Холбоотой эвэнт",
 	"text-reset-password": "Нууц үгээ анхны байдалд нь оруулж",
 	"text-save": "Хадгалах",
 	"text-search-result": "Хайлтын үр дүн",
 	"text-secs": "Сек",
 	"text-section-title": "Хэсгийн гарчиг",
-	"text-see-all-product": "Бүх бүтээгдэхүүнийг харах",
+	"text-see-all-product": "Бүх эвэнтийг харах",
 	"text-send-otp": "OTP илгээх",
 	"text-shipping": "Хүргэлт",
 	"text-shipping-address": "Хүргэлтийн хаяг",
@@ -258,7 +258,7 @@
 	"text-shop-by-category": "Ангилалаар дэлгүүр хэсээрэй",
 	"text-shop-colon": "Байгууллага:",
 	"text-shopping-cart": "Байгууллагийн сагс",
-	"text-shops-title": "Таны ойролцоох супер дэлгүүрүүд",
+	"text-shops-title": "Таны ойролцоох газрууд",
 	"text-sign-in": "Нэвтрэн орно уу",
 	"text-sku": "ску",
 	"text-social": "Нийгмийн",
@@ -289,7 +289,7 @@
 	"text-time-over": "Цаг дууссан!",
 	"text-title": "Гарчиг",
 	"text-top-brands": "Шилдэг брэндүүд",
-	"text-top-products": "Шилдэг бүтээгдэхүүн",
+	"text-top-products": "Шилдэг эвэнт",
 	"text-total": "нийт",
 	"text-total-amount": "Нийт дүн",
 	"text-total-item": "Нийт зүйл",
