--- a/apps/storefront/public/locales/mn/new.json
+++ b/apps/storefront/public/locales/mn/new.json
@@ -4,10 +4,10 @@
 	"text-billing": "Тооцоо хийх",
 	"text-city": "Хот",
 	"text-country": "Улс",
-	"text-no-best-selling-products-found": "Шилдэг борлуулалттай бүтээгдэхүүн олдсонгүй!",
-	"text-no-featured-products-found": "Онцолсон бүтээгдэхүүн олдсонгүй!",
-	"text-no-flash-products-found": "Ямар ч флаш бүтээгдэхүүн олдсонгүй!",
-	"text-no-on-selling-products-found": "Борлуулах бүтээгдэхүүн олдсонгүй!",
+	"text-no-best-selling-products-found": "Шилдэг борлуулалттай эвэнт олдсонгүй!",
+	"text-no-featured-products-found": "Онцолсон эвэнт олдсонгүй!",
+	"text-no-flash-products-found": "Ямар ч флаш эвэнт олдсонгүй!",
+	"text-no-on-selling-products-found": "Борлуулах эвэнт олдсонгүй!",
 	"text-save": "Хадгалах",
 	"text-state": "Сум/Дүүрэг",
 	"text-street-address": "Гудамжны хаяг",
